linked javascript file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <link rel= "stylesheet" href="style.css">
-    <script async src="index.js"></script>
+    <script async src="webJavaScript.js"></script>
     <title> Portfolio </title>
   </head>
 
