--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <footer>
-    <a href = "https://www.linkedin.com/in/michelle-w-60b46a186/"> LinkedIn </a>
+    <a href = "https://www.linkedin.com/in/michelle-w-60b46a186/" target="_blank"> LinkedIn </a>
     </footer>
 
   </body>
