added drop shadow to photos

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <div id="photo-gallery-section">
       <h1> Photo gallery </h1>
       <div class="photo-gallery">
-        <img src="https://images.unsplash.com/photo-1560940742-43a23e56f1b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="Palm Tree">
-        <img src="https://images.unsplash.com/photo-1561056532-2d709f79aa7b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="Random building">
-        <img src="https://images.unsplash.com/photo-1561074043-1b204dad0418?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="The Ocean">
-        <img src="https://images.unsplash.com/photo-1560528836-2c73fd9c4cfe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="Cherry Blossams">
-        <img src="https://images.unsplash.com/photo-1479995118733-e58d9c0654ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="The Ocean">
-        <img src="https://images.unsplash.com/photo-1526404423292-15db8c2334e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="A Street">
+        <img class="photo" src="https://images.unsplash.com/photo-1560940742-43a23e56f1b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="Palm Tree">
+        <img class="photo" src="https://images.unsplash.com/photo-1561056532-2d709f79aa7b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="Random building">
+        <img class="photo" src="https://images.unsplash.com/photo-1561074043-1b204dad0418?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="The Ocean">
+        <img class="photo" src="https://images.unsplash.com/photo-1560528836-2c73fd9c4cfe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="Cherry Blossams">
+        <img class="photo" src="https://images.unsplash.com/photo-1479995118733-e58d9c0654ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="The Ocean">
+        <img class="photo" src="https://images.unsplash.com/photo-1526404423292-15db8c2334e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60" alt="A Street">
       </div>
     </div>
 
